Moved to just Model

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "that-simple-orm",
-    "description": "A very simple ORM for Typescript",
-    "version": "0.0.11",
+    "name": "that-simple-model",
+    "description": "A very simple set of Model decorators for for Typescript",
+    "version": "0.0.13",
     "license": "MIT",
     "repository": {
         "type": "git",
@@ -16,18 +16,13 @@
         "test": "node admin/scripts/test.js",
         "publish": "node admin/scripts/publish.js"
     },
-    "dependencies": {
-        "class-transformer": "^0.1.9",
-        "aws-sdk": "^2.321.0"
-    },
+    "dependencies": {},
     "devDependencies": {
         "@types/jasmine": "^2.8.7",
         "@types/node": "^10.5.8",
         "jasmine-core": "^3.1.0",
         "jasmine-spec-reporter": "^4.2.1",
         "nyc": "^11.7.3",
-        "dotenv": "^6.0.0",
-        "sqlite": "^3.0.0",
         "that-build-library": "^0.1.31",
         "ts-node": "^7.0.0",
         "tsconfig-paths": "^3.4.2",
